2016/12/10 v163
	1. Fix popup-action won't show when alt+drag to create them, caused by v162.

2016/12/10 v162
	1. Fix the auto-gen popup bar auto hide for pet and mount.

2016/12/10 v161
	1. Since the quest reward all add to collection, there is no need to check it.

2016/12/10 v160
	1. Fix the container's name is changed when delete container that above it.

2016/12/10 v159
	1. Fix the popup button won't show when drag to generate it.

2016/12/10 v158
	1. Fix the container view syste's manager for english version.

2016/12/10 v157
	1. Fix the auto quest select item.

2016/12/10 v156
	1. Fix the auto finish quest without select.

2016/12/10 v155
	1. Re-fix the auto-gen flyout spell's visibility.

2016/12/09 v154
	1. ChatFrame'll show the tips when mouse is over links.
	2. Auto sell, auto repair, auto split and stack added for container.
	3. Auto quest added for quest mover.
	4. Fix the auto-gen flyout spell.

2016/11/30 v153
	1. Fix the auto fade of the minimap.

2016/11/30 v152
	1. Fix the autofade bar with show grid options.

2016/11/29 v151
	1. Fix flyout spell's generation.
	2. The auto hide/fade bar will be shown when pick up a spell, and will be hide/fade correctly after place or cancel it.
	3. Fix style for temp chatframe.
	4. Fix micro menu's position after the pet combat.

2016/11/28 v150
	1. Right-click the minimap's zone text to toggle the auto fade option.
	2. Right-click the quest log's header to toggle the auto fade option.

2016/11/28 v149
	1. Fix chat frame tab's broken.

2016/11/28 v148
	1. Auto fade option added to quest list.
	2. Chat Frame use a more clear style.

2016/11/27 v147
	1. Fix the micro menu not shown when get out of the vehicle.
	2. Auto fade option added to minimap.

2016/11/27 v146
	1. Fix the auto fade bar won't fade when lock the action bar.

2016/11/26 v145
	1. The micro menu buttons can be moved to anywhere, and auto hide, auto fade can be used on it.
	2. The extra bar can be moved, unlock it in the manager frame.
